# HyperStarC

./: .gitignore  README.md  pyproject.toml
hyperstarc/: config.py  dist.py  erlang_handler.py  fit_handler.py  fitters.py  herlang_handler.py  main.py  map_handler.py  plot_handler.py  sam_handler.py  ui.py
samples/: exp.py  exp_samples.txt  gamma.py  gamma_samples.txt  her.py  her.txt
src/: config.py  dist.py  fitters.py  handler.py  main.py  ui.py
tests/: test_dist.py
