[project]
name = "hyperstarc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.23.3",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
